# Pyrokinetic

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProjects.bat  Pyrokinetic.sln  README.md  imgui.ini  premake5.lua
Editor/: Editor.vcxproj  Editor.vcxproj.filters  Profile-Runtime.json  Profile-Shutdown.json  Profile-Startup.json  imgui.ini
Editor/assets/shaders/: FlatColor.glsl  Texture.glsl
Editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h  Viewport2D.cpp  Viewport2D.h  resource.rc
Editor/src/Panels/: AssetView.cpp  AssetView.h  Properties.cpp  Properties.h  SceneHierarchy.cpp  SceneHierarchy.h
Pyrokinetic/: Pyrokinetic.vcxproj  Pyrokinetic.vcxproj.filters
Pyrokinetic/ext/Glad/: CMakeLists.txt  Glad.vcxproj  premake5.lua
Pyrokinetic/ext/Glad/include/glad/: glad.h
Pyrokinetic/ext/Glad/src/: glad.c
Pyrokinetic/ext/vulkan/: CMakeLists.txt  premake5.lua
Pyrokinetic/src/: Pyrokinetic.h  pkpch.cpp  pkpch.h
Pyrokinetic/src/Platform/Mac/: MacInput.cpp  MacWindow.cpp  MacWindow.h
Pyrokinetic/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLPipeline.cpp  OpenGLPipeline.h  OpenGLRenderCommandBuffer.cpp  OpenGLRenderCommandBuffer.h  OpenGLRenderPass.cpp  OpenGLRenderPass.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  imgui_impl_opengl3.cpp
Pyrokinetic/src/Platform/Vulkan/: VkTypes.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanInitializer.h  VulkanMemory.cpp  VulkanMemory.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanRenderCommandBuffer.cpp  VulkanRenderCommandBuffer.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTexture.cpp  VulkanTexture.h  VulkanVertexArray.cpp  VulkanVertexArray.h  vma.cpp
Pyrokinetic/src/Platform/Windows/: WindowsFileBrowser.cpp  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Pyrokinetic/src/Pyrokinetic/: Application.cpp  Application.h  CameraController.cpp  CameraController.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.h  MouseCodes.h  Window.h  pkpch.h
Pyrokinetic/src/Pyrokinetic/Asset/: Asset.h  AssetManager.cpp  AssetManager.h
Pyrokinetic/src/Pyrokinetic/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  FileBrowser.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Maths.h  Timestep.h  Window.cpp  Window.h  resource.aps
Pyrokinetic/src/Pyrokinetic/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Pyrokinetic/src/Pyrokinetic/ImGui/: ImGuiBackend.cpp  ImGuiBackend.h  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h  ImGuiStyles.h
Pyrokinetic/src/Pyrokinetic/Profiling/: Instrumentor.h
Pyrokinetic/src/Pyrokinetic/Rendering/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  Pipeline.cpp  Pipeline.h  RenderCommand.cpp  RenderCommand.h  RenderCommandBuffer.cpp  RenderCommandBuffer.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  WindowIcon.h
Pyrokinetic/src/Pyrokinetic/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h
Sandbox/: Sandbox.vcxproj
scripts/: cmake.bat  win-genprojects.bat
